tests/baselines/reference/symbolProperty25.errors.txt
tests/cases/conformance/es6/Symbols/symbolProperty25.ts(5,7): error TS2420: Class 'C' incorrectly implements interface 'I'.
  Property '[Symbol.toPrimitive]' is missing in type 'C'.


==== tests/cases/conformance/es6/Symbols/symbolProperty25.ts (1 errors) ====
    interface I {
        [Symbol.toPrimitive]: () => boolean;
    }
    
    class C implements I {
          ~
!!! error TS2420: Class 'C' incorrectly implements interface 'I'.
!!! error TS2420:   Property '[Symbol.toPrimitive]' is missing in type 'C'.
        [Symbol.toStringTag]() {
            return "";
        }
    }